--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config build/webpack.config.dev.js",
     "test": "webpack",
     "eslint": "webpack",
-    "build:dll": "webpack --config webpack.config.dll.js",
-    "build:dev": "cross-env env_config=dev NODE_ENV=production webpack --config build/webpack.config.dev.js",
-    "build:prod": "cross-env env_config=prod NODE_ENV=production webpack --config build/webpack.config.prod.js",
-    "build:test": "cross-env env_config=test NODE_ENV=production webpack --config build/webpack.config.prod.js"
+
+    "start": "cross-env env_feature=server webpack-dev-server --config build/webpack.config.dev.js",
+    "build:analysisdev": "cross-env env_feature=analysis env_config=dev NODE_ENV=production webpack --config build/webpack.config.dev.js",
+    "build:dev": "cross-env env_config=dev NODE_ENV=dev webpack --config build/webpack.config.dev.js",
+
+    "build:dll": "webpack --config build/webpack.config.dll.js",
+    "build:analysis": "cross-env env_feature=analysis env_config=dev NODE_ENV=production webpack --config build/webpack.config.prod.js",
+    "build:dev2": "cross-env env_config=dev NODE_ENV=production webpack --config build/webpack.config.prod.js",
+    "build:test": "cross-env env_config=test NODE_ENV=production webpack --config build/webpack.config.prod.js",
+    "build:prod": "cross-env env_config=prod NODE_ENV=production webpack --config build/webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +26,6 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-preset-jsx": "^1.1.2",
     "autoprefixer": "^9.7.4",
@@ -47,12 +51,13 @@
     "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "thread-loader": "^2.1.3",
     "url-loader": "^3.0.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-build-notifier": "^2.0.0",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
