--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "omo-cli",
+  "name": "omo-basic-config",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "webpack",
-    "eslint": "webpack",
-
+    "eslint": "eslint ./src --fix",
     "start": "cross-env env_feature=server webpack-dev-server --config build/webpack.config.dev.js",
-    "build:analysisdev": "cross-env env_feature=analysis env_config=dev NODE_ENV=production webpack --config build/webpack.config.dev.js",
+    "build:adev": "cross-env env_feature=analysis env_config=dev NODE_ENV=production webpack --config build/webpack.config.dev.js",
     "build:dev": "cross-env env_config=dev NODE_ENV=dev webpack --config build/webpack.config.dev.js",
-
     "build:dll": "webpack --config build/webpack.config.dll.js",
-    "build:analysis": "cross-env env_feature=analysis env_config=dev NODE_ENV=production webpack --config build/webpack.config.prod.js",
-    "build:dev2": "cross-env env_config=dev NODE_ENV=production webpack --config build/webpack.config.prod.js",
+    "build:aprod": "cross-env env_config=dev NODE_ENV=production env_feature=analysis webpack --config build/webpack.config.prod.js",
+    "build:cdev": "cross-env env_config=dev NODE_ENV=production webpack --config build/webpack.config.prod.js",
     "build:test": "cross-env env_config=test NODE_ENV=production webpack --config build/webpack.config.prod.js",
     "build:prod": "cross-env env_config=prod NODE_ENV=production webpack --config build/webpack.config.prod.js"
   },
@@ -29,6 +27,7 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-preset-jsx": "^1.1.2",
     "autoprefixer": "^9.7.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "bootstrap": "^3.4.1",
     "cache-loader": "^4.1.0",
@@ -37,6 +36,11 @@
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^5.0.2",
     "happypack": "^5.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
@@ -53,6 +57,7 @@
     "terser-webpack-plugin": "^2.3.5",
     "thread-loader": "^2.1.3",
     "url-loader": "^3.0.0",
+    "vue-eslint-parser": "^7.0.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
